feat: auto-detect ORIGIN from request URL
- Replace getAppOrigin() with getOrigin(url) that derives from request
- ORIGIN env var is now optional - auto-detected if not set
- Works seamlessly in dev (localhost:5173) and production
- Update .env.example to show ORIGIN as optional

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ PUBLIC_STACK_PROJECT_ID=<your-project-id>
 PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=<your-publishable-client-key>
 STACK_SECRET_SERVER_KEY=<your-secret-server-key>
 
-# App URL (required for OAuth and email callbacks)
-# Set to your production URL, e.g., https://comictranslate.app
-ORIGIN=http://localhost:5173
+# App URL (optional - auto-detected from request if not set)
+# Set this only if you need to override the auto-detected origin
+# ORIGIN=https://your-domain.com
 
